footer adjust link

--- a/index.html
+++ b/index.html
@@ -466,335 +466,7 @@
 
       <!-- End Lightbox Images & Captions -->
 
-      <!-- form panel -->
-
-      <section
-        id="section-form-panel"
-        style="display: none; background-color: rgba(0, 0, 0, 0.25)"
-      >
-        <div class="form-wrapper">
-          <div
-            data-w-id="932781ee-8d4e-11f4-d7a4-15ebf75afcf7"
-            class="form-panel-close-trigger"
-          ></div>
-          <div class="form-panel" style="">
-            <div class="form-panel-header">
-              <a
-                href="#"
-                data-w-id="932781ee-8d4e-11f4-d7a4-15ebf75afcfa"
-                target="_blank"
-                class="form-header-button w-inline-block"
-              >
-                <div>Close</div>
-              </a>
-            </div>
-            <div class="form w-form">
-              <form
-                id="contact-form"
-                name="wf-form-Contact-Form"
-                data-name="Contact Form"
-                method="get"
-                data-wf-page-id="634bdaf5428502197657919e"
-                data-wf-element-id="932781ee-8d4e-11f4-d7a4-15ebf75afcff"
-                novalidate="novalidate"
-                aria-label="Contact Form"
-              >
-                <div class="field_wrapper">
-                  <label
-                    for="Name-contact"
-                    class="field-label text-base field-label-large"
-                    >Your name</label
-                  >
-                  <input
-                    class="field text-medium name w-input"
-                    data-msg-minlength="Please enter your full name"
-                    maxlength="256"
-                    name="Name"
-                    data-name="Name"
-                    placeholder=""
-                    minlength="3"
-                    type="text"
-                    id="Name-contact"
-                    data-msg="What should we call you?"
-                    required=""
-                  />
-                </div>
-                <div class="field_wrapper">
-                  <label
-                    for="Role-contact"
-                    class="field-label text-base field-label-large"
-                    >Your role</label
-                  >
-                  <input
-                    class="field text-medium name w-input"
-                    maxlength="256"
-                    name="Role"
-                    data-name="Role"
-                    placeholder=""
-                    type="text"
-                    id="Role-contact"
-                  />
-                </div>
-                <div class="field_wrapper">
-                  <label
-                    for="Email-contact"
-                    class="field-label text-base field-label-large"
-                    >Your email</label
-                  >
-                  <input
-                    class="field text-medium email w-input"
-                    maxlength="256"
-                    name="Email"
-                    data-name="Email"
-                    placeholder=""
-                    type="email"
-                    id="Email-contact"
-                    required=""
-                  />
-                </div>
-                <div id="subject" class="field_wrapper is-radio">
-                  <label
-                    for="Message-2"
-                    class="field-label text-medium is-radio"
-                    >Subject</label
-                  >
-                  <div class="radio_wrap">
-                    <label class="radio_field w-radio">
-                      <div
-                        class="w-form-formradioinput w-form-formradioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Project"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Project"
-                      />
-                      <span
-                        class="radio_label text-base w-form-label"
-                        for="Project"
-                        >Project</span
-                      >
-                    </label>
-                    <label class="radio_field w-radio">
-                      <div
-                        class="w-form-formradioinput w-form-form radioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Collaboration"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Collaboration"
-                      /><span
-                        class="radio_label text-base w-form-label"
-                        for="Collaboration"
-                        >Collaboration</span
-                      ></label
-                    ><label class="radio_field w-radio"
-                      ><div
-                        class="w-form-formradioinput w-form-formradioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Commission"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Commission"
-                      /><span
-                        class="radio_label text-base w-form-label"
-                        for="Commission"
-                        >Commission</span
-                      ></label
-                    ><label class="radio_field w-radio"
-                      ><div
-                        class="w-form-formradioinput w-form-formradioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Freelance"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Freelance"
-                      /><span
-                        class="radio_label text-base w-form-label"
-                        for="Freelance"
-                        >Freelance</span
-                      ></label
-                    ><label class="radio_field w-radio"
-                      ><div
-                        class="w-form-formradioinput w-form-formradioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Education-2"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Education"
-                      /><span
-                        class="radio_label text-base w-form-label"
-                        for="Education-2"
-                        >Education</span
-                      ></label
-                    ><label class="radio_field w-radio"
-                      ><div
-                        class="w-form-formradioinput w-form-formradioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Help-Advice"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Help-Advice"
-                      /><span
-                        id="Advice"
-                        class="radio_label text-base w-form-label"
-                        for="Help-Advice"
-                        >Help/Advice</span
-                      ></label
-                    ><label class="radio_field w-radio"
-                      ><div
-                        class="w-form-formradioinput w-form-formradioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Chat"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Chat"
-                      /><span
-                        class="radio_label text-base w-form-label"
-                        for="Chat"
-                        >Chat</span
-                      ></label
-                    ><label class="radio_field w-radio"
-                      ><div
-                        class="w-form-formradioinput w-form-formradioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Natter"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Natter"
-                      /><span
-                        class="radio_label text-base w-form-label"
-                        for="Natter"
-                        >Natter</span
-                      ></label
-                    ><label class="radio_field w-radio"
-                      ><div
-                        class="w-form-formradioinput w-form-formradioinput--inputType-custom radio_button w-radio-input"
-                      ></div>
-                      <input
-                        id="Other"
-                        type="radio"
-                        name="Subject"
-                        data-name="Subject"
-                        style="opacity: 0; position: absolute; z-index: -1"
-                        value="Other"
-                      /><span
-                        class="radio_label text-base w-form-label"
-                        for="Other"
-                        >Other</span
-                      ></label
-                    >
-                  </div>
-                </div>
-                <div class="field_wrapper">
-                  <label
-                    for="Message"
-                    class="field-label text-base field-label-large"
-                    >Message</label
-                  ><textarea
-                    class="field text-medium message w-input"
-                    maxlength="5000"
-                    name="Message"
-                    data-name="Message"
-                    placeholder=""
-                    minlength="10"
-                    id="Message"
-                    required=""
-                  ></textarea>
-                  <div class="error2"></div>
-                </div>
-                <input
-                  type="submit"
-                  data-wait="Please wait..."
-                  class="submit text-base w-button"
-                  value="Submit"
-                />
-              </form>
-              <div
-                class="success text-medium w-form-done"
-                tabindex="-1"
-                role="region"
-                aria-label="Contact Form success"
-              >
-                <div class="success_text">
-                  Thank you, your message has been received and we will be in
-                  touch&nbsp;shortly.
-                </div>
-              </div>
-              <div
-                class="error-message text-base w-form-fail"
-                tabindex="-1"
-                role="region"
-                aria-label="Contact Form failure"
-              >
-                <div class="error-message_text">
-                  Something went wrong while submitting the form. Please try
-                  again.
-                </div>
-              </div>
-            </div>
-            <div class="form-panel-footer">
-              <a
-                href="mailto:mail@nathansmith.design"
-                class="footer-link-item apply-fg-color w-inline-block"
-                style=""
-                ><h3
-                  class="footer-link-text footer-black apply-fg-color text-small"
-                  style=""
-                >
-                  → Email
-                </h3></a
-              ><a
-                href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1X5UlL6llRnBxwt-wwx7qJv9BqL1WePrP82Q7B2F_2z_z-4z-dWwfKn11Od53pyCZ2_zdN5zI5"
-                target="_blank"
-                class="footer-link-item apply-fg-color w-inline-block"
-                style=""
-                ><h3
-                  class="footer-link-text footer-black apply-fg-color text-small"
-                  style=""
-                >
-                  → Book chat
-                </h3></a
-              ><a
-                href="https://www.instagram.com/nathanpsmith_/"
-                target="_blank"
-                class="footer-link-item w-inline-block"
-                ><h3
-                  class="footer-link-text footer-black apply-fg-color text-small"
-                  style=""
-                >
-                  → Instagram
-                </h3></a
-              >
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!--  -->
+    
 
       <!-- FOOTER -->
       <footer id="footer" class="container-fluid footer_component text-small">
@@ -807,28 +479,19 @@
                 → info@JennyLee.Golf
               </div></a
             >
-            <div id="form-open-id" class="form-open">
-              <div class="footer-link-item text-small">→ Inquiries</div>
+            <div id="" class="">
+              <a href="https://leemillsgroup.com" class="footer-link-item apply-fg-color w-inline-block" target="_blank">
+              <div class="footer-link-item text-small">→ Work with me</div>
+            </a>
             </div>
           </div>
           <div id="footer_item_col2" class="footer_item_wrapper">
-            <a
-              href="https://www.instagram.com/"
-              target="_blank"
-              class="footer-link-item apply-fg-color w-inline-block"
-              ><div class="footer-link-text text-small">→ Instagram</div></a
-            >
-            <a
-              href="https://calendar.app.google/hdxgn9onAFrAUeHY9"
-              target="_blank"
-              class="footer-link-item apply-fg-color w-inline-block"
-              ><div class="footer-link-text text-small">→ Chat</div></a
-            >
+     
           </div>
           <div id="footer_copyright" class="footer_item_wrapper">
             <div class="footer-copyright-item apply-fg-color text-small">
               <div class="footer-copyright-text">
-                © Jenny Lee <span class="footer-copyright-year">2024</span>
+                © Jenny Lee <span class="footer-copyright-year">2020 - 2024</span>
               </div>
             </div>
           </div>
